# soloyalty

./: .gitignore  Makefile  docker-compose.yml  txt.env
containers/adminer/: Dockerfile
containers/django/: Dockerfile  entrypoint.sh
containers/django/config/s6/daphne/: run
containers/django/config/s6/gunicorn/: run
containers/frontend/: Dockerfile
containers/nginx/: Dockerfile
containers/nginx/config/: db.gbreana.42.fr.conf  gbreana.42.fr.conf
containers/postgres/: Dockerfile
containers/redis/: Dockerfile
srcs/backend/: envinit.sh
srcs/backend/soltyback/: hello.py  manage.py  pyproject.toml
srcs/backend/soltyback/loyalty/: __init__.py  apps.py  auth.py  authentication.py  models.py  serializers.py  signals.py  urls.py  views.py
srcs/backend/soltyback/soltyback/: asgi.py  settings.py  settings_bkp.py  urls.py  wsgi.py
srcs/backend/soltyback/soltyback/configs/: base.py  dev.py  prod.py  stage.py
srcs/frontend/code/: layout.tsx  tsconfig.json
srcs/frontend/code/app/: page.tsx
srcs/frontend/code/app/business/: page.tsx
srcs/frontend/code/consumer/: page.tsx
srcs/frontend/code/types/: index.d.ts
srcs/frontend/soltyfront/: PRIVY_AUTH_README.md  package.json  pnpm-lock.yaml  tsconfig.json  v0-user-next.config.mjs
srcs/frontend/soltyfront/app/: layout.tsx
srcs/frontend/soltyfront/components/: PrivyLoginButton.tsx  ProtectedRoute.tsx
srcs/frontend/soltyfront/contexts/: PrivyProvider.tsx
srcs/frontend/soltyfront/hooks/: usePrivyAuth.ts
srcs/frontend/soltyfront/public/: auth_test.html
srcs/frontend/soltyfront/scripts/: setup-env.js
(+8 files in other folders)
